--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/netinfo": "7.1.3",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "@reduxjs/toolkit": "^1.8.0",
     "expo": "~44.0.0",
+    "expo-ads-admob": "~12.0.0",
     "expo-status-bar": "~1.2.0",
     "moment": "^2.29.1",
     "react": "17.0.1",
