--- a/app.json
+++ b/app.json
@@ -10,6 +10,15 @@
       "resizeMode": "contain",
       "backgroundColor": "#105fa0"
     },
+    "plugins": [
+      [
+        "expo-notifications",
+        {
+          "icon": "./assets/notification-icon.png",
+          "color": "#ffffff"
+        }
+      ]
+    ],
     "updates": {
       "fallbackToCacheTimeout": 0
     },
