--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
     "@reduxjs/toolkit": "^1.8.0",
     "expo": "~44.0.0",
     "expo-ads-admob": "~12.0.0",
+    "expo-device": "~4.1.0",
+    "expo-notifications": "~0.14.0",
     "expo-status-bar": "~1.2.0",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.34",
+    "native-notify": "^2.0.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-gesture-handler": "^2.3.0",
+    "react-native-gesture-handler": "~2.1.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-vector-icons": "^9.1.0",
