--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gon",
+  "name": "gon24",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -20,6 +20,7 @@
     "expo-device": "~4.1.0",
     "expo-notifications": "~0.14.0",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.7",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
     "native-notify": "^2.0.2",
